--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<dependency>
 			<groupId>org.zkoss.zk</groupId>
 			<artifactId>zkex</artifactId>
-			<version>3.6.3</version>
+			<version>${zk.version}</version>
 		</dependency>
 		
 		<dependency>
